--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500;600&display=swap');
 
 @font-face {
-  font-family: 'JagAlskarDig';
+  font-family: 'JagAlskarDigK';
   src: url('../fonts/JagAlskarDigKanInteSe.otf') format('truetype');
+}
+@font-face {
+  font-family: 'JagAlskarDig';
+  src: url('../fonts/JagAlskarDig.otf') format('truetype');
 }
 
 @font-face {
@@ -31,13 +35,13 @@
 
 
 body {
-  font-family: 'FirstTime', sans-serif;
+  font-family: 'JagAlskarDig', sans-serif;
   color: rgb(var(--foreground-rgb));
 }
 
 
 .jag {
-  font-family: 'JagAlskarDig', sans-serif;
+  font-family: 'JagAlskarDigK', sans-serif;
 }
 
 .space {
